--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <a class="nav-link" href="./pages/portofolio.html">Portfolio</a>
               </li>
               <div class="dropdown p-lg-2 m-lg-1">
-                <button class="btn btn-transparent-layanan nav-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn btn-transparent nav-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Layanan
                 </button>
                 <ul class="dropdown-menu dd-layanan">
@@ -306,23 +306,30 @@
               </div>
               <div class="col-lg-6" data-aos="fade-up">
                 <div class="group-our-team p-2">
-                  <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Get to know us!</p>
-                  <h6 class="app-primary-dua-0 f-w-700 mb-4">Our Team, Our Family 😊</h6>
-                  <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Halo! Kami adalah agensi branding dan digital. Kami percaya bahwa "ide-ide hebat"
-                     dapat diwujudkan sebagai kunci keberhasilan. Jadi kami di sini untuk membantu Anda "menyapa" pasar potensial Anda 
-                     dan membangun merek Anda lebih menonjol daripada yang lain. Mari bekerjasama bersama kami dan lihatlah bagaimana 
-                     kami dapat membantu meningkatkan bisnis Anda.</p>
-                  <div class="d-lg-flex text-center">
-                  <div class="">
-                    <img src="./image/logo/logo-fan.png" alt="">
-                  </div>
-                  <div class="m-3 align-middle">
-                    <p class="paragraph-text-three app-base-40 mb-0">Customer :</p>
-                  </div>
-                  <div class="m-3 align-middle">
-                    <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
-                  </div>
-                  <div class="m-3 align-middle">
+                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Get to know us!</p>
+                    <h6 class="app-primary-dua-0 f-w-700 mb-4">Our Team, Our Family 😊</h6>
+                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Halo! Kami adalah agensi branding dan digital. Kami percaya bahwa "ide-ide hebat"
+                       dapat diwujudkan sebagai kunci keberhasilan. Jadi kami di sini untuk membantu Anda "menyapa" pasar potensial Anda 
+                       dan membangun merek Anda lebih menonjol daripada yang lain. Mari bekerjasama bersama kami dan lihatlah bagaimana 
+                       kami dapat membantu meningkatkan bisnis Anda.</p>
+                <div class="d-lg-flex text-center">
+                    <div class="">
+                      <img src="./image/logo/logo-fan.png" alt="">
+                    </div>
+                    <div class="m-3 align-middle">
+                      <p class="paragraph-text-three app-base-40 mb-0">Customer :</p>
+                    </div>
+                    <div class="m-4 align-middle">
+                      <div class="group-image-hero">
+                        <div class="count-image-1">
+                          <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="m-3 align-middle">
+                      <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                    </div>
+                    <div class="m-2 align-middle">
                     <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g filter="url(#filter0_d_160_722)">
                         <path
@@ -407,8 +414,8 @@
                         </filter>
                       </defs>
                     </svg>
-                </div>
-              </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -1017,13 +1024,20 @@
                       <div class="">
                         <img src="./image/logo/logo-fan.png" alt="">
                       </div>
-                      <div class="m-3 p-1 align-middle">
+                      <div class="m-3 align-middle">
                         <p class="paragraph-text-three app-base-40 mb-0">Customer :</p>
                       </div>
-                      <div class="m-3 p-1 align-middle">
-                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                      <div class="m-4 align-middle">
+                        <div class="group-image-hero">
+                          <div class="count-image-1">
+                            <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                          </div>
+                        </div>
                       </div>
                       <div class="m-3 align-middle">
+                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                      </div>
+                      <div class="m-2 align-middle">
                         <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <g filter="url(#filter0_d_160_722)">
                             <path
@@ -1211,6 +1225,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2//2.0.0-beta.2.4/owl.carousel.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/countDown.js"></script>
     <script>
       AOS.init();
     </script>
