--- a/pages/detailportofoliowebdev.html
+++ b/pages/detailportofoliowebdev.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.2.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.2.4/assets/owl.theme.default.css">
 
+
     <!--=============== LINK FONT AWESOME ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
@@ -26,12 +27,12 @@
     <!--=============== LINK CSS ===============-->
     <link rel="stylesheet" href="../css/style.css">
     <!--=============== JUDUL ===============-->
-    <title>Portofolio Web Development</title>
+    <title>Detail Portofolio Web Developer</title>
   </head>
   <body>
     
     <!--========= Open Nav =========-->
-    <section class="bg-portofolio">
+    <section class="">
       <div class="container-lg">
     <header class="header pt-4">
     <nav class="navbar navbar-expand-lg rounded-3 bg-light">
@@ -49,7 +50,7 @@
                 <a class="nav-link" href="../pages/tentang.html">Tentang</a>
               </li>
               <li class="nav-item p-3">
-                <a class="nav-link" href="../pages/portofolio.html">Portfolio</a>
+                <a class="nav-link link-active" href="../pages/portofolio.html">Portfolio</a>
               </li>
               <div class="dropdown p-lg-2 m-lg-1">
                 <button class="btn btn-transparent nav-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -74,11 +75,11 @@
                 <a class="nav-link" href="#">Layanan</a>
               </li> -->
               <div class="dropdown p-lg-2 m-lg-1">
-                <button class="btn btn-transparent nav-link link-active" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn btn-transparent nav-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Contact
                 </button>
                 <ul class="dropdown-menu">
-                  <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item" href="../pages/portofoliowebdev.html">Portofolio Webdev</a></li>
+                  <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item p-1 m-1" href="../pages/portofoliowebdev.html">Portofolio Webdev</a></li>
                   <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item" href="../pages/portofolioads.html">Portofolio Ads</a></li>
                 </ul>
               </div>
@@ -98,65 +99,93 @@
     <!-- Open Main -->
     <main>
 
-        <!--========= Open Section Home Portfolio =========-->
-            <div class="container margin-top-web-1">
-                <div class="row">
-                    <div class="col-md-12" data-aos="fade-up">
-                        <div class="text-center">
-                            <h4 class="text-white f-w-700 mb-5">PT Home Developer</h4>
-                            <p class="paragraph-text-two text-white f-w-400 mb-5">Halo! Kami adalah agensi branding dan digital. Kami percaya bahwa "ide-ide hebat" dapat <br> diwujudkan sebagai kunci keberhasilan. Jadi kami di sini untuk membantu Anda "menyapa" <br> pasar potensial Anda dan membangun merek Anda lebih menonjol daripada yang
-                              lain.</p>
+        <!--========= Open Section Home =========-->
+                <div class="container margin-top-web-1">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                <p class="app-text-20 f-w-400">Home / Portofolio / <span class="app-primary-dua-0 f-w-700">Detail</span></p>
+                            </div>
+                            <div class="mb-4">
+                                <img src="../image/portofolio/img-portofolio-detail.png" class="img-fluid w-100" alt="">
+                            </div>
+                            <div class="d-lg-flex">
+                                <div class="col-md-3">
+                                    <img src="../image/portofolio/image-portofolio-detail-1.png" class="img-fluid w-100 px-2" alt="">
+                                </div>
+                                <div class="col-md-3">
+                                    <img src="../image/portofolio/image-portofolio-detail-2.png" class="img-fluid w-100 px-2" alt="">
+                                </div>
+                                <div class="col-md-3">
+                                    <img src="../image/portofolio/image-portofolio-detail-3.png" class="img-fluid w-100 px-2" alt="">
+                                </div>
+                                <div class="col-md-3">
+                                    <img src="../image/portofolio/image-portofolio-detail-4.png" class="img-fluid w-100 px-2" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="gruop-text-portofolio-detail">
+                                <div class="mb-2">
+                                    <p class="heading-text-one-40 app-primary-dua-0 f-w-700">Web Digimar</p>
+                                </div>
+                                <div class="mb-4">
+                                    <p class="paragraph-text-one app-text-0 f-w-500">amet consectetur. Quis dui aliquam a imperdiet sed egestas. <br> Elementum sem aliquet a eget facilisis consectetur nam <br> adipiscing. Felis facilisis nibh mattis enim sit congue lobortis. <br> Adipiscing consectetur et malesuada volutpat eget porttitor. </p>
+                                </div>
+                                <div class="mb-5">
+                                    <hr class="w-100">
+                                </div>
+                                <div class="mb-5">
+                                    <div class="d-lg-flex mb-3">
+                                        <p class="app-primary-dua-0 f-w-700">Client</p>
+                                        <p class="app-primary-dua-0 f-w-700 px-5">:</p>
+                                        <p class="paragraph-text-one app-text-0 f-w-500">Digimar store Handphone</p>
+                                    </div>
+                                    <div class="d-lg-flex">
+                                        <p class="app-primary-dua-0 f-w-700">Layanan</p>
+                                        <p class="app-primary-dua-0 f-w-700 px-4">:</p>
+                                        <p class="paragraph-text-one app-text-0 f-w-500 px-4">Web Development</p>
+                                    </div>
+                                </div>
+                                <div class="mb-5">
+                                    <hr class="w-100">
+                                </div>
+                                <div class="">
+                                    <div class="d-flex">
+                                        <p class="app-primary-dua-0 f-w-700">Problem</p>
+                                        <p class="app-primary-dua-0 f-w-700 px-4">:</p>
+                                        <p class="">Quis dui aliquam a imperdiet sed egestas. <br> Elementum sem aliquet a eget facilisis <br> consectetur nam adipiscing. </p>
+                                    </div>
+                                    <div class="d-flex">
+                                        <p class="app-primary-dua-0 f-w-700">Solving</p>
+                                        <p class="app-primary-dua-0 f-w-700 px-4">:</p>
+                                        <p class="">Felis facilisis nibh mattis enim sit congue <br> lobortis. Adipiscing consectetur et malesuada <br> volutpat eget porttitor. </p>
+                                    </div>
+                                </div>
+                                <div class="group-btn-contact-portofolio-detail">
+                                    <a href="#" class="btn btn-portfolio-detail-home">Lihat Website <i class="px-1 fa-sharp fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            </div>
-        </section>
-        <!--========= Close Section Home Portfolio =========-->
-
-
-        <!--========= Open Section About  =========-->
-        <section class="margin-top-web-1">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 margin-top-web-about-portfolio" data-aos="fade-up">
-                      <div class="">
-                          <img src="../image/portofolio/img-portofolio-about.png" class="img-portofolio-about" alt="">
-                      </div>
-                    </div>
-                    <div class="col-lg-6" data-aos="fade-up">
-                        <div class="group-btn-contact">
-                            <a href="#" class="btn btn-portfolio-detail-home">Lihat Website <i class="px-1 fa-sharp fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                  </div>
+            <div class="group-image-hero">
+                <div class="count-image-bulat">
+                    <img src="../image/portofolio/bg-portofolio-detail-buat.png" class="img-fluid w-100" alt="">
                 </div>
-                <div class="group-image-hero">
-                  <div class="count-frame-1-portofolio">
-                    <div class="">
-                      <img src="../image/portofolio/img-bulat-portofolio-about.png" class="img-fluid icon-frame-home" alt="">
-                    </div>
-                  </div>
-                  <div class="count-frame-contact">
-                    <div class="">
-                      <img src="../image/home/img-titik-titik.png" class="img-fluid icon-frame-contact" alt="">
-                    </div>
-                  </div>
+                <div class="count-image-titik">
+                    <img src="../image/portofolio/bg-portofolio-detail-titik.png" class="img-fluid w-100" alt="">
                 </div>
+              </div>
         </section>
-        <!--========= Close Section About  =========-->
+        <!--========= Close Section Home =========-->
 
 
                 <!--========= Open Section Portfolio =========-->
                 <section class="margin-top-web-1">
                     <div class="container">
                       <div class="row">
-                        <div class="col-md-12" data-aos="fade-up">
-                            <div class="text-center mb-5">
-                                <h6 class="app-primary-dua-0 f-w-700 mb-3">Portfolio</h6>
-                                <p class="paragraph-text-one app-primary-dua-0 f-w-400">Hasil rekap kerja kami bersama tim</p>
-                            </div>
-                        </div>
                         <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-duration="1000">
                           <div class="card-portfolio mb-3">
                             <img src="../image/home/img-portfolio-1.png" class="img-portfolio" alt="">
@@ -346,13 +375,20 @@
                       <div class="">
                         <img src="../image/logo/logo-fan.png" alt="">
                       </div>
-                      <div class="m-3 p-1 align-middle">
+                      <div class="m-3 align-middle">
                         <p class="paragraph-text-three app-base-40 mb-0">Customer :</p>
                       </div>
-                      <div class="m-3 p-1 align-middle">
-                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                      <div class="m-4 align-middle">
+                        <div class="group-image-hero">
+                          <div class="count-image-1">
+                            <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                          </div>
+                        </div>
                       </div>
                       <div class="m-3 align-middle">
+                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                      </div>
+                      <div class="m-2 align-middle">
                         <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <g filter="url(#filter0_d_160_722)">
                             <path
@@ -541,6 +577,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2//2.0.0-beta.2.4/owl.carousel.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../js/countDown.js"></script>
     <script>
       AOS.init();
     </script>
