--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -329,13 +329,20 @@
                       <div class="">
                         <img src="../image/logo/logo-fan.png" alt="">
                       </div>
-                      <div class="m-3 p-1 align-middle">
+                      <div class="m-3 align-middle">
                         <p class="paragraph-text-three app-base-40 mb-0">Customer :</p>
                       </div>
-                      <div class="m-3 p-1 align-middle">
-                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                      <div class="m-4 align-middle">
+                        <div class="group-image-hero">
+                          <div class="count-image-1">
+                            <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                          </div>
+                        </div>
                       </div>
                       <div class="m-3 align-middle">
+                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                      </div>
+                      <div class="m-2 align-middle">
                         <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <g filter="url(#filter0_d_160_722)">
                             <path
@@ -524,6 +531,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2//2.0.0-beta.2.4/owl.carousel.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../js/countDown.js"></script>
     <script>
       AOS.init();
     </script>
