--- a/pages/tentang.html
+++ b/pages/tentang.html
@@ -147,10 +147,17 @@
                   <div class="m-3 align-middle">
                     <p class="paragraph-text-three app-base-40 mb-0">Customer :</p>
                   </div>
+                  <div class="m-4 align-middle">
+                    <div class="group-image-hero">
+                      <div class="count-image-1">
+                        <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                      </div>
+                    </div>
+                  </div>
                   <div class="m-3 align-middle">
                     <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
                   </div>
-                  <div class="m-3 align-middle">
+                  <div class="m-2 align-middle">
                     <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g filter="url(#filter0_d_160_722)">
                         <path
@@ -303,33 +310,33 @@
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="100">
                         <div class="card-our-team-tentang">
-                          <img src="../image/tentang/img-card-tentang-1.png" alt="">
+                          <img src="../image/tentang/img-team-ajeng.png" class="img-fluid w-100" alt="">
                             <div class="card-body">
                                 <div class="group-text-card-tentang">
-                                    <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Mubariz Mehdizad</p>
-                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Web Development</p>
+                                    <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Ajeng Kalika H</p>
+                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Founder at FAN</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="300">
                         <div class="card-our-team-tentang">
-                          <img src="../image/tentang/img-card-tentang-2.png" alt="">
+                          <img src="../image/tentang/img-team-robi.png" class="img-fluid w-100" alt="">
                             <div class="card-body">
                                 <div class="group-text-card-tentang">
-                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Mubariz Mehdizad</p>
-                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Web Development</p>
+                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Robi algifari</p>
+                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">CEO at FAN</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="500">
                         <div class="card-our-team-tentang">
-                          <img src="../image/tentang/img-card-tentang-3.png" alt="">
+                          <img src="../image/tentang/img-team-bachtiar.png" alt="">
                             <div class="card-body">
                                 <div class="group-text-card-tentang">
-                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Mubariz Mehdizad</p>
-                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Web Development</p>
+                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Bachtiar Rahadi</p>
+                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Head Creative at FAN</p>
                                 </div>
                             </div>
                         </div>
@@ -347,44 +354,44 @@
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="100">
                         <div class="card-our-team-tentang">
-                          <img src="../image/tentang/img-card-tentang-5.png" alt="">
+                          <img src="../image/tentang/img-team-defri.png" alt="">
                             <div class="card-body">
                                 <div class="group-text-card-tentang">
-                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Mubariz Mehdizad</p>
-                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Web Development</p>
+                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Defri Habiebi</p>
+                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Head Creative at FAN</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="300">
                         <div class="card-our-team-tentang">
-                          <img src="../image/tentang/img-card-tentang-6.png" alt="">
+                          <img src="../image/tentang/img-team-bayu.png" alt="">
                             <div class="card-body">
                                 <div class="group-text-card-tentang">
-                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Mubariz Mehdizad</p>
-                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Web Development</p>
+                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Maulana Bayu S</p>
+                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">COO at FAN</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="500">
                         <div class="card-our-team-tentang">
-                          <img src="../image/tentang/img-card-tentang-7.png" alt="">
+                          <img src="../image/tentang/img-team-hazhiah.png" alt="">
                             <div class="card-body">
                                 <div class="group-text-card-tentang">
-                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Mubariz Mehdizad</p>
-                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Web Development</p>
+                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Hazhiah Alya</p>
+                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Account Executive at FAN</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="700">
                         <div class="card-our-team-tentang">
-                          <img src="../image/tentang/img-card-tentang-8.png" alt="">
+                          <img src="../image/tentang/img-team-dodi.png" alt="">
                             <div class="card-body">
                                 <div class="group-text-card-tentang">
-                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Mubariz Mehdizad</p>
-                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Web Development</p>
+                                    <p class="heading-text-one app-primary-dua-0 f-w-700">Dodi Kurniawan </p>
+                                    <p class="paragraph-text-one app-primary-dua-0 f-w-400">Head Production at FAN</p>
                                 </div>
                             </div>
                         </div>
@@ -432,13 +439,20 @@
                       <div class="">
                         <img src="../image/logo/logo-fan.png" alt="">
                       </div>
-                      <div class="m-3 p-1 align-middle">
+                      <div class="m-3 align-middle">
                         <p class="paragraph-text-three app-base-40 mb-0">Customer :</p>
                       </div>
-                      <div class="m-3 p-1 align-middle">
-                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                      <div class="m-4 align-middle">
+                        <div class="group-image-hero">
+                          <div class="count-image-1">
+                            <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                          </div>
+                        </div>
                       </div>
                       <div class="m-3 align-middle">
+                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                      </div>
+                      <div class="m-2 align-middle">
                         <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <g filter="url(#filter0_d_160_722)">
                             <path
@@ -627,6 +641,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2//2.0.0-beta.2.4/owl.carousel.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../js/countDown.js"></script>
     <script>
       AOS.init();
     </script>
