--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                   <p class="paragraph-text-one app-primary-dua-0 f-w-400">Berikut ini adalah kepuasan client kami</p>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6" data-aos="fade-up">
+              <div class="col-md-6 col-sm-12" data-aos="fade-up">
                 <div class="group-col-one-testimonial">
                   <div class="bg-testimonial">
                   <div class="row justify-content-center py-5">
@@ -1127,16 +1127,16 @@
                 </div>
               </div>
               <div class="col-md-12" data-aos="fade-up">
-                <div class="text-center">
+                <div class="text-center mb-5">
                   <img src="./image/home/bg-partnertship.png" class="img-fluid" alt="">
                 </div>
-                <div class="owl-carousel  owl-theme text-center" data-aos="fade-up">
-                  <div class="item"><img src="./image/home/icon-clients-1.png" class="icon-client m-lg-5"></div>
-                  <div class="item"><img src="./image/home/icon-clients-2.png" class="icon-client m-lg-5"></div>
-                  <div class="item"><img src="./image/home/icon-clients-3.png" class="icon-client m-lg-5"></div>
-                  <div class="item"><img src="./image/home/icon-clients-4.png" class="icon-client m-lg-5"></div>
-                  <div class="item"><img src="./image/home/icon-clients-5.png" class="icon-client m-lg-5"></div>
-              </div>
+                <div class="text-center">
+                  <div class="mb-5">
+                    <h6 class="app-primary-dua-0 f-w-700">Partnership</h6>
+                  </div>
+                  <img src="./image/logo/img-artnership-academy.png" class="img-artnership mx-3 mb-3" alt="">
+                  <img src="./image/logo/img-artnership-developer.png" class="img-artnership mx-3" alt="">
+                </div>
               </div>
             </div>
           </div>
