--- a/pages/portofoliowebdev.html
+++ b/pages/portofoliowebdev.html
@@ -445,13 +445,13 @@
                 <div class="text-center">
                   <img src="../image/home/bg-partnertship.png" class="img-fluid" alt="">
                 </div>
-                <div class="owl-carousel  owl-theme text-center">
-                  <div class="item"><img src="../image/home/icon-clients-1.png" class="icon-client m-lg-5"></div>
-                  <div class="item"><img src="../image/home/icon-clients-2.png" class="icon-client m-lg-5"></div>
-                  <div class="item"><img src="../image/home/icon-clients-3.png" class="icon-client m-lg-5"></div>
-                  <div class="item"><img src="../image/home/icon-clients-4.png" class="icon-client m-lg-5"></div>
-                  <div class="item"><img src="../image/home/icon-clients-5.png" class="icon-client m-lg-5"></div>
-              </div>
+                <div class="text-center">
+                  <div class="mb-5">
+                    <h6 class="app-primary-dua-0 f-w-700">Partnership</h6>
+                  </div>
+                  <img src="../image/logo/img-artnership-academy.png" class="img-artnership mx-3 mb-3" alt="">
+                  <img src="../image/logo/img-artnership-developer.png" class="img-artnership mx-3" alt="">
+                </div>
               </div>
             </div>
           </div>
